<resources>
    <string name="app_name">小象快运</string>
    <string name="app_name_ver">小象快运-货主</string>
    <string name="shipper_ver">货主版</string>
    <string name="app_ver">1.0</string>
    <string name="app_welcome">小象物流，您身边的大物流专家！</string>
    <string name="phone">手机</string>
    <string name="password">密码</string>
    <string name="invitation">邀请码</string>
    <string name="valid_code">验证码</string>
    <string name="register">注册</string>
    <string name="fitch_password">找回密码</string>
    <string name="title_about_us">关于我们</string>
    <string name="title_order_detail">订单详情</string>
    <string name="title_bid_order">订单报价</string>
    <string name="action_settings">设置</string>
    <string name="message_settings">消息设置</string>
    <string name="sys_message">系统消息</string>
    <string name="tab_home_message">消息</string>
    <string name="help_feedback">意见反馈</string>
    <string name="mine_addBeaer">添加司机</string>
    <string name="mine_withdraw">提现</string>
    <string name="mine_bankCard">银行卡</string>
    <string name="mine_recored">交易明细</string>
    <string name="activity_title_login">登录</string>
    <string name="activity_title_register">用户注册</string>
    <string name="activity_title_deliver">发货</string>
    <string name="dialog_loading">正在连接中,请稍候…</string>
    <string name="dialog_request">正在请求…</string>
    <string name="dialog_later">稍后再说</string>
    <string name="dialog_update">立刻更新</string>
    <string name="dialog_change">持卡人姓名或身份证与认证信息不一致，一旦修改以后将不能进行更改。</string>
    <string name="dialog_bind_limit">银行卡绑定数量已达上限</string>
    <string name="dialog_IDcard">身份号已被其他用户使用！如需申诉，请联系客服电话：4000-316-888</string>
    <string name="distance_login">您的账号已在其他设备上登录。若非本人操作，您的登录密码可能已泄露，请及时改密。</string>
    <string name="dialog_change_sure">修改确认</string>
    <string name="dialog_IDcard_tip">身份证号已使用</string>
    <string name="storePath">/shipper/</string>
    <string name="tip_need_net">无法连接，请检查网络状态！</string>
    <string name="tip_need_phone">请输入正确的中国大陆手机号码！</string>
    <string name="tip_add_friend">点击输入手机号码</string>
    <string name="tip_need_pwd">请输入正确不小于6位的密码！</string>
    <string name="tip_need_pwd_confirm">两次输入的密码不同！</string>
    <string name="tip_login_failed">登录失败，请稍后重试！</string>
    <string name="tip_invalid_code">错误的验证码！</string>
    <string name="tip_inner_error">请先认认证！</string>
    <string name="tip_server_error">无法连接服务器！</string>
    <string name="tip_unknown_error">未知错误！</string>
    <string name="tip_exception_error">异常错误！</string>
    <string name="tip_user_exist">用户已存，请登录！</string>
    <string name="tip_reg_succeed">注册成功！</string>
    <string name="tip_no_orders">无订单数据！</string>
    <string name="tip_need_address">发货与收货地址不能为空！</string>
    <string name="tip_need_amount">货物数量与价格不能为空！</string>
    <string name="tip_need_receiver">收货人姓名与电话不能为空！</string>
    <string name="tip_click_select_area">点击选择省市区</string>
    <string name="tip_please_select_area">请选择省市区</string>
    <string name="tip_please_select_carmodel">请选择车型车长</string>
    <string name="tip_please_select">请选择</string>
    <string name="tip_bankcardName">请输入持卡人姓名</string>
    <string name="tip_bankcardID">请输入持卡人身份证</string>
    <string name="tip_deliver_success">提交发货信息成功！</string>
    <string name="tip_update_at">更新于:&#160;</string>
    <string name="tip_done">完成</string>
    <string name="tip_failed">失败</string>
    <string name="tip_first_withdraw">创建交易密码</string>
    <string name="tip_first_confirm">再次确认交易密码</string>
    <string name="tip_first_pay">首次账户支付\n请设置支付密码</string>
    <string name="hint_setPass_tip">输入交易密码</string>
    <string name="tip_delete_ok_please_pay">委托司机成功，请支付运费</string>
    <string name="tip_delete_ok_please_go">委托成功，请确认发车</string>
    <string name="tip_delete_ok">委托成功</string>
    <string name="btn_submit">提交</string>
    <string name="btn_send_me_code">获取验证码</string>
    <string name="btn_login">登录</string>
    <string name="btn_need_to_reg">还没账号，注册</string>
    <string name="btn_deliver">我要发货</string>
    <string name="btn_pressed_say">按住 留言</string>
    <string name="btn_click_play">点击 播放</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_save">保存</string>
    <string name="btn_confirm">确定</string>
    <string name="btn_delegation">委托</string>
    <string name="btn_comment">评价</string>
    <string name="btn_Nocomment">暂无评价</string>
    <string name="btn_comment_record">评价记录</string>
    <string name="qddsjsmqh">请等待司机上门取货</string>
    <string name="ysz">运送中</string>
    <string name="deliver_Insurance">保险</string>
    <string name="deliver_Insurance_Amount_tip">金额</string>
    <string name="deliver_Insurance_Amount">为您免费投保100万元</string>
    <string name="deliver_AddCollection">添加收货人</string>
    <string name="deliver_AddCollection_tip">代收货款（司机代收货款）</string>
    <string name="deliverCollection_order">代收货款订单</string>
    <string name="deliverCollection">代收货款</string>
    <string name="deliver_collection">司机代收：</string>
    <string name="deliver_collection_consignee">收货人/金额</string>
    <string name="deliverCollectionAmount">代收金额：</string>
    <string name="deliver_AddCollection_mine">自己</string>
    <string name="ysk_text">已收款</string>
    <string name="wsk_text">未收款</string>
    <string name="lab_phone_num">手 机 号</string>
    <string name="lab_valid_code">验 证 码</string>
    <string name="lab_password">密 码</string>
    <string name="lab_password_new">新 密 码</string>
    <string name="lab_password_confirm">确认密码</string>
    <string name="lab_repeat_send">重发</string>
    <string name="lab_repeat_send_code">重发验证码</string>
    <string name="lab_timeout">超时</string>
    <string name="lab_invalid">失效</string>
    <string name="lab_save">保存</string>
    <string name="lab_account">账 号</string>
    <string name="lab_forgot_password">忘记密码？</string>
    <string name="lab_from_place">出发地</string>
    <string name="lab_to_place">目的地</string>
    <string name="lab_price_truck">整车价</string>
    <string name="lab_price_ton">吨价</string>
    <string name="lab_price_cube">方价</string>
    <string name="lab_price_mh">价格：</string>
    <string name="lab_price">价格</string>
    <string name="lab_price_unit_cube">元/方</string>
    <string name="lab_price_unit_ton">元/顿</string>
    <string name="lab_price_unit_truck">元/车</string>
    <string name="lab_price_total">总价：</string>
    <string name="lab_post_deliver">发布</string>
    <string name="lab_sent_address">发货地址</string>
    <string name="lab_receive_address">收货地址</string>
    <string name="lab_goods_style">货物类型</string>
    <string name="lab_goods_amount">货物数量</string>
    <string name="lab_truck_style">车型</string>
    <string name="lab_unit_ton">吨位</string>
    <string name="lab_unit_cube">方数</string>
    <string name="lab_send_goods_time">发货时间</string>
    <string name="lab_arrive_goods_time">到货时间</string>
    <string name="lab_invoice">发票</string>
    <string name="lab_insurance">保险</string>
    <string name="lab_pay_method">付款方式</string>
    <string name="lab_memo">备注</string>
    <string name="lab_consignee">收货人</string>
    <string name="lab_consignee_phone">联系方式</string>
    <string name="lab_total_amount">数量</string>
    <string name="lab_trans_type">配送方式</string>
    <string name="lab_carload">零担</string>
    <string name="lab_vehicle">整车</string>
    <string name="lab_truck_type_length">车型/车长</string>
    <string name="lab_sent_time">发货时间</string>
    <string name="lab_receive_time">到货时间</string>
    <string name="lab_contact_tip">从通讯录选择</string>
    <string name="lab_add_contact_tip">添加联系人</string>
    <string name="has_passed">您的审核已通过，恭喜您！</string>
    <string name="wo_name">姓名</string>
    <string name="car_number">车牌号</string>
    <string name="load">载重</string>
    <string name="receipt">回单照片</string>
    <string name="pay_to">支付给司机</string>
    <string name="pay_money">支付金额</string>
    <string name="savings">储蓄卡</string>
    <string name="bind_once">只有一次修改机会</string>
    <string name="single_limit">单笔限额</string>
    <string name="daily_limit">每日限额</string>
    <string name="lab_order_publish">发货时间：</string>
    <string name="lab_order_quote">司机报价：</string>
    <string name="lab_bid_none">暂未报价</string>
    <string name="lab_qiate_none">暂无司机报价</string>
    <string name="lab_order_unit_man">人</string>
    <string name="lab_order_self_quote">您的报价：</string>
    <string name="lab_order_mine_bid">我的出价：</string>
    <string name="lab_order_total_price">总价：</string>
    <string name="lab_order_id">订单编号：</string>
    <string name="lab_order_display_detail">点击显示订单详细信息</string>
    <string name="lab_order_pull_more">上拉显示更多</string>
    <string name="lab_order_pull_refresh">上拉刷新</string>
    <string name="lab_page_tip">提示：此页只显示订单简略信息。</string>
    <string name="lab_order_message">订单信息</string>
    <string name="lab_click_show_track">点击订单显示司机路线</string>
    <string name="lab_cn_zhi">至</string>
    <string name="lab_certification_hackman">平台认证司机</string>
    <string name="lab_certification_hackman_company">平台认证企业</string>
    <string name="lab_certification_qualification">资格认证</string>
    <string name="certification">认证</string>
    <string name="in_the_review">审核中</string>
    <string name="review_of_patient">您提交的资料正在审核中，请耐心等待</string>
    <string name="prompt_failed">您的审核未通过，请重新提交资料。</string>
    <string name="not_by_reason">未通过原因：</string>
    <string name="image_fuzzy">身份证过于模糊。</string>
    <string name="wrong_information">信息填写有误。</string>
    <string name="certification_progress">提交后，将于1-2个工作日内完成审核。</string>
    <string name="auth_time_tip">审核提交成功！审核时间1-2个工作日，请耐心等待。</string>
    <string name="regist_auth_tip">认证为公司需填写法人信息、公司名称并上传相应的营业执照。</string>
    <string name="regist_busilicen_tip">营业执照上的信息必须与上述所填信息一致！</string>
    <string name="withdraw_time_tip">提现申请已提交，等待审核后工作日72小时内到账。</string>
    <string name="auth_success">您的审核已通过，证件将不对外公开且无法更改</string>
    <string name="operation_tip">您需要进入系统"设置"-"安全"-"应用程序许可"中</string>
    <string name="operation">您的手机通讯录联系人为空，可能是关闭了小象快运访问通讯录的权限，请去设置中开启</string>
    <string name="jurisdiction_tip">小象快运没有权限访问您的通讯录</string>
    <string name="face_tip">(︶︿︶)</string>
    <string name="to_resubmit">重新提交</string>
    <string name="payChange">更换</string>
    <string name="add_bank">添加银行卡</string>
    <string name="lab_level">等级</string>
    <string name="lab_level_mh">等级：</string>
    <string name="lab_send_success_mh">成功送达：</string>
    <string name="lab_truck_style_mh">车型：</string>
    <string name="lab_truck_length_mh">车长：</string>
    <string name="lab_truck_length">车长</string>
    <string name="lab_bid_price_mh">出价：</string>
    <string name="lab_total_price_mh">总价：</string>
    <string name="lab_unit">单位</string>
    <string name="lab_amount">数量</string>
    <string name="lab_price_style">报价方式</string>
    <string name="lab_price_style_truck">包车价</string>
    <string name="lab_price_style_rmb_truck">元/包车</string>
    <string name="lab_price_style_ton">元/吨</string>
    <string name="lab_price_style_cube">元/方</string>
    <string name="lab_price_style_kg">元/公斤</string>
    <string name="lab_price_style_piece">元/件</string>
    <string name="lab_phone">手机</string>
    <string name="unit_cube">方</string>
    <string name="unit_piece">件</string>
    <string name="unit_ton">吨</string>
    <string name="unit_kg">公斤</string>
    <string name="unit_rmb">元</string>
    <string name="unit_alone">单</string>
    <string name="hint_confirm_your_password">确认您的密码</string>
    <string name="hint_set_your_password">设置您的密码</string>
    <string name="hint_china_mobile_no">中国大陆手机号</string>
    <string name="hint_input_tmp_price">点击输入暂定价格</string>
    <string name="hint_click_agree_to_register">点击“注册”按钮，即表示您同意</string>
    <string name="hint_click_agree_to_license">《小象速运许可及服务协议》</string>
    <string name="tab_home">小象快运</string>
    <string name="tab_order">我的订单</string>
    <string name="tab_track">订单跟踪</string>
    <string name="tab_mine">我</string>
    <string name="tab_lab_order_default">默认排序</string>
    <string name="tab_lab_order_credit">信用排序</string>
    <string name="tab_lab_order_price">价格排序</string>
</resources>