<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_silver"
    android:orientation="vertical">

    <org.csware.ee.view.TopActionBar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        app:canClose="true"
        app:titleText="@string/register"
        />


    <LinearLayout
        android:id="@+id/boxPhoneForm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--手机-->
        <LinearLayout
            style="@style/RegionPaddingBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/LabelFont"
                android:text="@string/phone" />

            <LinearLayout
                android:padding="6dp"
                style="@style/RegionRowBodyBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtUsername"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_china_mobile_no"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_face_color"
                    android:windowSoftInputMode="adjustPan|stateVisible|stateHidden" />
            </LinearLayout>

        </LinearLayout>

        <!-- 密码-->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:paddingLeft="5dp"
                style="@style/LabelFont"
                android:text="@string/valid_code" />

                <EditText
                    android:id="@+id/txtValidCode"
                    android:layout_marginLeft="16dp"
                    android:layout_width="136dp"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="number"
                    android:maxLength="6"
                    android:textColor="@color/face_black" />

                <Button
                    android:id="@+id/btnGetValidCode"
                    style="@style/BlueSharpFillButton"
                    android:layout_weight="1"
                    android:text="@string/btn_send_me_code" />
            </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/boxLoginForm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:orientation="vertical">
        <LinearLayout
            style="@style/RegionPaddingBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/LabelFont"
                android:text="@string/password" />

                <EditText
                    android:paddingLeft="56dp"
                    android:id="@+id/txtPassword"
                    android:layout_width="0.0dp"
                    android:layout_weight="5.5"
                    android:background="@null"
                    android:hint="@string/hint_set_your_password"
                    android:inputType="textPassword"
                    android:maxLength="32"
                    style="@style/NormalFont"
                    android:textColorHint="@color/hint_face_color"
                    />

        </LinearLayout>


        <LinearLayout
            style="@style/RegionPaddingBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/LabelFont"
                android:text="@string/lab_password_confirm" />

                <EditText
                    android:paddingLeft="26dp"
                    android:id="@+id/txtPasswordConfirm"
                    android:layout_width="0.0dp"
                    android:layout_weight="5.5"
                    android:background="@null"
                    android:hint="@string/hint_confirm_your_password"
                    android:inputType="textPassword"
                    android:maxLength="32"
                    style="@style/NormalFont"
                    android:textColorHint="@color/hint_face_color"
                     />

        </LinearLayout>

        <LinearLayout
            style="@style/RegionPaddingBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Lin_invation"
            android:layout_marginTop="@dimen/dp_20"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/LabelFont"
                android:text="@string/invitation" />

            <EditText
                android:paddingLeft="40dp"
                android:id="@+id/txtInvitation"
                android:layout_width="0.0dp"
                android:layout_weight="5.5"
                android:background="@null"
                android:maxLength="16"
                android:singleLine="true"
                style="@style/NormalFont"
                android:textColorHint="@color/hint_face_color"
                />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/submit"
        style="@style/BlueSharpFillButton"
        android:layout_width="fill_parent"
        android:layout_marginTop="26dp"
        android:text="@string/register" />


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="bottom|center_horizontal"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/txt_forgot_tip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_click_agree_to_register"
            android:textSize="@dimen/normal_text_size"
            android:layout_marginLeft="6dp"
            />
        <TextView
            android:id="@+id/txt_regist_papers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_click_agree_to_license"
            android:textSize="@dimen/normal_text_size"
            android:textColor="@color/bg_blue"
            />
    </LinearLayout>


</LinearLayout>