<?xml version="1.0" encoding="utf-8"?>
<!--包含确定的对话头-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/header_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg_silver"
    android:orientation="horizontal">

    <LinearLayout
        style="@style/DialogHeaderBox"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/dialogCancel"
            style="@style/OrangeTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_cancel" />
        <TextView
            android:id="@+id/dialogTitle"
            style="@style/TitleFont"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/app_name" />

        <Button
            android:id="@+id/dialogConfirm"
            style="@style/OrangeTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_confirm" />
    </LinearLayout>

</LinearLayout>

