<?xml version="1.0" encoding="utf-8"?>
<org.csware.ee.widget.InputMethodLinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/login_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_silver"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/boxLogoForm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_blue"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_50"
            android:background="@drawable/xx_logo_white" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="26dp"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                style="@style/HugeWhiteFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name" />

            <TextView
                style="@style/SmallWhiteFont"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shipper_ver" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/boxLoginForm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:orientation="vertical">
        <!--手机-->
        <LinearLayout
            style="@style/RegionPaddingBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                style="@style/NormalIconBox"
                android:src="@drawable/dl_icon_mobilephone" />

            <TextView
                style="@style/LabelFont"
                android:text="@string/phone" />

            <LinearLayout
                style="@style/RegionRowBodyBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtUsername"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/hint_china_mobile_no"
                    android:inputType="number"
                    android:maxLength="11"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_face_color"
                    android:windowSoftInputMode="adjustPan|stateVisible|stateHidden" />
            </LinearLayout>

        </LinearLayout>

        <!-- 密码-->
        <LinearLayout
            style="@style/RegionPaddingBox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                style="@style/NormalIconBox"
                android:src="@drawable/dl_icon_password" />

            <TextView
                style="@style/LabelFont"
                android:text="@string/password" />

            <LinearLayout
                style="@style/RegionRowBodyBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="输入密码"
                    android:maxLength="32"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_face_color"
                    android:windowSoftInputMode="adjustPan|stateVisible|stateHidden" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/boxButtonForm"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnReg"
            style="@style/WhiteSharpFillButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/register" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/BlueSharpFillButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_login" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_margin="18dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lab_forgot_password"
            android:textColor="@color/bg_blue"
            android:textSize="@dimen/input_text_size" />
    </LinearLayout>


</org.csware.ee.widget.InputMethodLinearLayout>